SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  abaker, klindsay
Tag Date:    27 Feb 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227c
Tag Summary: Diagnostic output in overflows wasn't printing proper overflow
             index

Files Modified:
M       source/overflows.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    27 Feb 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227b
Tag Summary: overflows had a text field that was outputting ******* instead of
             proper diagnostic values

Files Modified:
M       source/overflows.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    27 Feb 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227a
Tag Summary: P_iron remin is not always computed correctly

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    27 Feb 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227
Tag Summary: Ecosys diagnostics didn't initialize P_iron%sed_loss to zero and
             had incorrect units for pfeToSed variable.

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  santos
Tag Date:    20 Dec 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131220
Tag Summary: Another bugfix related to updated compilers

Files Modified:
M       source/cfc_mod.F90
M       source/cfc11_mod.F90
M       source/tavg.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    5 Dec 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131205