@@ -2,6 +2,16 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  klindsay
+Tag Date:    27 Feb 2014
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227d
+Tag Summary: call to tfreez should be threaded (tfreez takes single block as
+             input)
+
+Files Modified:
+M       source/forcing.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  abaker, klindsay
 Tag Date:    27 Feb 2014
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227c
